--- a/requirements.txt
+++ b/requirements.txt
@@ -9,65 +9,60 @@ colorama==0.4.6
 comm==0.1.3
 contourpy==1.1.0
 cycler==0.11.0
-debugpy==1.6.6
+debugpy==1.6.7
 decorator==5.1.1
-exceptiongroup==1.2.0
 executing==1.2.0
 fastapi==0.108.0
 fonttools==4.42.0
-greenlet==2.0.2
 h11==0.14.0
 idna==3.4
-ipykernel==6.22.0
-ipython==8.12.0
-jedi==0.18.2
+ipykernel==6.25.0
+ipython==8.14.0
+jedi==0.19.0
 joblib==1.3.2
-jupyter_client==8.1.0
-jupyter_core==5.3.0
+jupyter_client==8.3.0
+jupyter_core==5.3.1
 kiwisolver==1.4.4
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
-nest-asyncio==1.5.6
+mysql-connector-python==8.0.32
+nest-asyncio==1.5.7
 nltk==3.8.1
-numpy==1.25.1
-packaging==23.0
+numpy==1.25.2
+packaging==23.1
 pandas==2.0.3
 parso==0.8.3
+patsy==0.5.3
 pickleshare==0.7.5
 Pillow==10.0.0
-platformdirs==3.2.0
-prompt-toolkit==3.0.38
-psutil==5.9.4
-psycopg2==2.9.7
+platformdirs==3.10.0
+prompt-toolkit==3.0.39
+psutil==5.9.5
 pure-eval==0.2.2
 pydantic==2.5.3
 pydantic_core==2.14.6
-Pygments==2.14.0
+Pygments==2.15.1
 PyMySQL==1.1.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
-pywin32==306
-pyzmq==25.0.2
+pyzmq==25.1.0
 regex==2023.12.25
 requests==2.31.0
 scikit-learn==1.3.2
-scipy==1.11.1
+scipy==1.11.2
 seaborn==0.12.2
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.20
 stack-data==0.6.2
 starlette==0.32.0.post1
-stats==0.1.2a0
-textblob==0.17.1
+statsmodels==0.14.0
 threadpoolctl==3.2.0
-tornado==6.2
+tornado==6.3.2
 tqdm==4.66.1
 traitlets==5.9.0
 typing_extensions==4.9.0
 tzdata==2023.3
 urllib3==2.0.4
 uvicorn==0.25.0
-vboxapi==1.0
 wcwidth==0.2.6
